Start development: terms, i18n auto-generation bug fixed

--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -26,9 +26,9 @@
       %pre.prettyprint= @entry.r6
 .form-group
   = link_to t('.back', :default => t("helpers.links.back")), |
-    entries_path, :class => 'btn btn-default'                |
+    entries_path, :class => 'btn btn-default'
   = link_to t('.edit', :default => t("helpers.links.edit")), |
-    edit_entry_path(@entry), :class => 'btn btn-default'     |
+    edit_entry_path(@entry), :class => 'btn btn-default'
   = link_to t('.destroy', :default => t("helpers.links.destroy")),                                               |
     entry_path(@entry),                                                                                          |
     :method => 'delete',                                                                                         |
