--- a/app/views/tournaments/index.html.haml
+++ b/app/views/tournaments/index.html.haml
@@ -21,4 +21,4 @@
           = link_to tournament_path(tournament), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do
             = glyph 'remove'
 = form_for @tournament, :html => { :class => 'form-horizontal form-model' } do |f|
-  = f.submit nil, :class => 'btn btn-primary'
+  = f.submit nil, :class => 'btn btn-primary btn-lg'
