--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -6,13 +6,15 @@
     %dt.label.label-default= model_class.human_attribute_name(:open)
     %dd
       %pre.prettyprint= @tournament.open
-.form-group
-  = link_to t('.back', :default => t("helpers.links.back")), |
-    tournaments_path, :class => 'btn btn-default'
-  = link_to t('.edit', :default => t("helpers.links.edit")),       |
-    edit_tournament_path(@tournament), :class => 'btn btn-default'
-  = link_to t('.destroy', :default => t("helpers.links.destroy")),                                               |
-    tournament_path(@tournament),                                                                                |
-    :method => 'delete',                                                                                         |
-    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, |
-    :class => 'btn btn-danger'                                                                                   |
+-#- puts @tournament.result.class
+= render @tournament.result
+-#.form-group
+-#  = link_to t('.back', :default => t("helpers.links.back")), |
+-#    tournaments_path, :class => 'btn btn-default'
+-#  = link_to t('.edit', :default => t("helpers.links.edit")),       |
+-#    edit_tournament_path(@tournament), :class => 'btn btn-default'
+-#  = link_to t('.destroy', :default => t("helpers.links.destroy")),                                               |
+-#    tournament_path(@tournament),                                                                                |
+-#    :method => 'delete',                                                                                         |
+-#    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, |
+-#    :class => 'btn btn-danger'                                                                                   |
